12-egress-communication-e2e-tls/istio-setup/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external
  namespace: istio-system
spec:
  hosts:
  - external.istiodemo
  exportTo:
  - "*"
  location: MESH_EXTERNAL
  ports: 
  - number: 32172
    name: https
    protocol: HTTPS    
  - number: 8080
    name: http
    protocol: HTTP       
  resolution: STATIC
  endpoints:
  - address: 172.18.0.2
